modify back-end project structure, change user service data storage sharding